--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: 0%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+
+
+
+
+/* Sidebar */
+.sidebar {
+  width: 256px;
+  height: 100dvh;
+  background: #2C2C2C;
   color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-block: 32px;
+  overflow-y: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar .sidebar-logo {
+  margin-inline: auto;
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar ul {
+  margin-top: 59px;
+  list-style-type: none;
+  padding: 0;
+  font-size: 18px;
+}
+
+.sidebar ul li {
+  padding: 17px 28px 13px 40px;
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.sidebar ul li:hover {
+  background: #444444;
+  cursor: pointer;
+}
+
+.sidebar ul li .sidebar-icons {
+  fill: #CACACA;
+}
+
+.sidebar ul li:hover>.sidebar-icons {
+  fill: #FFEC3D;
+}
+
+.sidebar .sidebar-logout {
+  padding-left: 24px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-top: 40px;
+  cursor: pointer;
+}
+
+
+
+
+
+
+/* Navbar */
+nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: calc(100% - 256px);
+  height: 84px;
+  box-shadow: 0 3px 6px 0 #00000029;
+  padding-block: 12px;
+  padding-right: 73px;
+}
+
+.avatar {
+  position: relative;
+  display: inline-block;
+  float: right;
+}
+
+.avatar::before {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  right: -2px;
+  width: 15px;
+  height: 15px;
+  background: #11B870;
+  border-radius: 50%;
 }
