--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-h1 {
+h2 {
   font-weight: 700;
   font-size: 24px;
   line-height: 100%;
@@ -107,4 +107,105 @@ nav {
   height: 15px;
   background: #11B870;
   border-radius: 50%;
+}
+
+
+
+
+
+
+/* Dashboard */
+.dashboard .stat-cards {
+  margin-top: 22px;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  column-gap: 20px;
+}
+
+.dashboard .stat-cards .stat-card {
+  padding: 33px 24px 28px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  box-shadow: 0 3px 6px 0 #00000029;
+  border-radius: 8px;
+}
+
+.dashboard .stat-cards .stat-card .stat-card-title {
+  font-size: 18px;
+  line-height: 100%;
+  color: #B1B1B1;
+}
+
+.dashboard .stat-cards .stat-card .stat-card-value {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 60px;
+  margin-bottom: 11px;
+}
+
+.dashboard .stat-cards .stat-card .stat-card-percentage {
+  font-size: 18px;
+  line-height: 100%;
+  font-weight: 500;
+}
+
+.dashboard .stat-cards .stat-card .stat-card-icon {
+  width: 64px;
+  height: 64px;
+  background: #FFEC3D;
+  border-radius: 16px;
+  flex-shrink: 0;
+  display: grid;
+  place-items: center;
+  padding-inline: 12px;
+  padding-block: 17px;
+}
+
+.dashboard .stat-cards .stat-card .stat-card-icon img,
+.dashboard .stat-cards .stat-card .stat-card-icon svg {
+  fill: black;
+  width: 100%;
+  height: 100%;
+}
+
+.dashboard .stat-cards .stat-card-chart {
+  padding: 33px 24px 28px;
+  grid-column: span 2 / span 2;
+}
+
+.dashboard .stat-cards .chart-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dashboard .stat-cards .chart-header button {
+  padding: 8px 16px;
+  border: none;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  height: 36px;
+  width: 91px;
+  text-align: center;
+}
+
+.dashboard .stat-cards .chart-header .btn-chart-active {
+  background: #2C2C2C;
+  color: #FFEC3D;
+}
+
+.dashboard .stat-cards .chart-header .btn-chart-inactive {
+  background: #F5F5F5;
+}
+
+
+
+
+
+
+/* Custom classes */
+.main-container {
+  padding: 135px 86px 78px 342px;
 }
