--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,27 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 h2 {
   font-weight: 700;
   font-size: 24px;
-  line-height: 100%;
+  line-height: 36px;
   letter-spacing: 0%;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 100%;
+}
+
+h4 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 100%;
 }
 
 
@@ -87,14 +101,7 @@ h2 {
 
 /* Navbar */
 nav {
-  position: fixed;
-  top: 0;
-  right: 0;
   width: calc(100% - 256px);
-  height: 84px;
-  box-shadow: 0 3px 6px 0 #00000029;
-  padding-block: 12px;
-  padding-right: 73px;
 }
 
 .avatar {
@@ -124,7 +131,6 @@ nav {
   margin-top: 22px;
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
-  column-gap: 20px;
 }
 
 .dashboard .stat-cards .stat-card {
@@ -177,6 +183,8 @@ nav {
 .dashboard .stat-cards .stat-card-chart {
   padding: 33px 24px 28px;
   grid-column: span 2 / span 2;
+  box-shadow: 0 3px 6px 0 #00000029;
+  border-radius: 8px;
 }
 
 .dashboard .stat-cards .chart-header {
@@ -203,14 +211,4 @@ nav {
 
 .dashboard .stat-cards .chart-header .btn-chart-inactive {
   background: #F5F5F5;
-}
-
-
-
-
-
-
-/* Custom classes */
-.main-container {
-  padding: 135px 86px 78px 342px;
 }
