--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,6 @@
   --shadow: 0 3px 6px 0 #00000029;
 }
 
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
-
 body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
@@ -20,22 +15,15 @@ body {
 }
 
 h2 {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 36px;
-  letter-spacing: 0%;
+  @apply font-bold text-[24px] leading-9;
 }
 
 h3 {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 100%;
+  @apply font-medium text-[24px] leading-9;
 }
 
 h4 {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 100%;
+  @apply font-bold text-lg;
 }
 
 
@@ -67,20 +55,7 @@ nav {
 }
 
 .avatar {
-  position: relative;
-  display: inline-block;
-  float: right;
-}
-
-.avatar::before {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  right: -2px;
-  width: 15px;
-  height: 15px;
-  background: #11B870;
-  border-radius: 50%;
+  @apply relative inline-block float-right before:content-[""] before:absolute before:bottom-2.5 before:-right-0.5 before:size-4 before:bg-[#11B870] before:rounded-full;
 }
 
 
