--- a/src/App.css
+++ b/src/App.css
@@ -64,35 +64,25 @@ nav {
 
 
 /* Dashboard */
-.dashboard .stat-cards {
-  margin-top: 22px;
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .stat-card {
-  padding: 33px 24px 28px;
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
+  @apply pt-[33px] px-6 pb-7 bg-white flex justify-between gap-x-2.5 rounded-lg;
   box-shadow: var(--shadow);
-  border-radius: 8px;
 }
 
-.stat-card-title {
+.stat-card .stat-card-title {
   font-size: 18px;
   line-height: 100%;
   color: #B1B1B1;
 }
 
-.dashboard .stat-cards .stat-card .stat-card-value {
+.stat-card .stat-card-value {
   font-weight: 700;
   font-size: 40px;
   line-height: 60px;
   margin-bottom: 11px;
 }
 
-.dashboard .stat-cards .stat-card .stat-card-percentage {
+.stat-card .stat-card-percentage {
   font-size: 18px;
   line-height: 100%;
   font-weight: 500;
@@ -108,27 +98,27 @@ nav {
   place-items: center;
 }
 
-.dashboard .stat-cards .stat-card .stat-card-icon img,
-.dashboard .stat-cards .stat-card .stat-card-icon svg {
+.stat-card .stat-card-icon img,
+.stat-card .stat-card-icon svg {
   fill: black;
   width: 100%;
   height: 100%;
 }
 
-.dashboard .stat-cards .stat-card-chart {
+.stat-card-chart {
   padding: 33px 24px 28px;
   grid-column: span 2 / span 2;
   box-shadow: 0 3px 6px 0 #00000029;
   border-radius: 8px;
 }
 
-.dashboard .stat-cards .chart-header {
+.chart-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.dashboard .stat-cards .chart-header button {
+.chart-header button {
   padding: 8px 16px;
   border: none;
   font-weight: 700;
@@ -139,12 +129,12 @@ nav {
   text-align: center;
 }
 
-.dashboard .stat-cards .chart-header .btn-chart-active {
+.chart-header .btn-chart-active {
   background: #2C2C2C;
   color: #FFEC3D;
 }
 
-.dashboard .stat-cards .chart-header .btn-chart-inactive {
+.chart-header .btn-chart-inactive {
   background: #F5F5F5;
 }
 
