--- a/src/App.css
+++ b/src/App.css
@@ -63,100 +63,40 @@ nav {
 
 
 
-/* Dashboard */
-.dashboard .stat-cards {
-  margin-top: 22px;
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+/* Components */
+
+.card-layout {
+  @apply px-6 pt-[33px] pb-7 bg-white rounded-lg;
+  box-shadow: var(--shadow);
 }
 
 .stat-card {
-  padding: 33px 24px 28px;
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  box-shadow: var(--shadow);
-  border-radius: 8px;
+  @apply card-layout flex justify-between gap-x-2.5;
 }
 
-.stat-card-title {
-  font-size: 18px;
-  line-height: 100%;
-  color: #B1B1B1;
+.stat-card .stat-card-title {
+  @apply text-lg text-[#B1B1B1];
 }
 
-.dashboard .stat-cards .stat-card .stat-card-value {
+.stat-card .stat-card-value {
+  @apply font-bold text-[40px] leading-[60px];
   font-weight: 700;
   font-size: 40px;
   line-height: 60px;
-  margin-bottom: 11px;
 }
 
-.dashboard .stat-cards .stat-card .stat-card-percentage {
-  font-size: 18px;
-  line-height: 100%;
-  font-weight: 500;
+.stat-card .stat-card-icon {
+  @apply size-16 bg-[#FFEC3D] rounded-2xl shrink-0 grid place-items-center;
 }
 
-.stat-card-icon {
-  width: 64px;
-  height: 64px;
-  background: #FFEC3D;
-  border-radius: 16px;
-  flex-shrink: 0;
-  display: grid;
-  place-items: center;
+.stat-card .stat-card-icon svg {
+  @apply fill-black;
 }
 
-.dashboard .stat-cards .stat-card .stat-card-icon img,
-.dashboard .stat-cards .stat-card .stat-card-icon svg {
-  fill: black;
-  width: 100%;
-  height: 100%;
+.btn-chart {
+  @apply py-2 px-4 font-bold text-sm h-9;
 }
 
-.dashboard .stat-cards .stat-card-chart {
-  padding: 33px 24px 28px;
-  grid-column: span 2 / span 2;
-  box-shadow: 0 3px 6px 0 #00000029;
-  border-radius: 8px;
-}
-
-.dashboard .stat-cards .chart-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.dashboard .stat-cards .chart-header button {
-  padding: 8px 16px;
-  border: none;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 100%;
-  height: 36px;
-  width: 91px;
-  text-align: center;
-}
-
-.dashboard .stat-cards .chart-header .btn-chart-active {
-  background: #2C2C2C;
-  color: #FFEC3D;
-}
-
-.dashboard .stat-cards .chart-header .btn-chart-inactive {
-  background: #F5F5F5;
-}
-
-
-
-
-
-
-
-
-
-/* Components */
 .form-element {
   @apply p-4 border border-[#909090] rounded-lg;
 }
